# Embedded-Course-SUB

./: README.md
HW/: emb_ex_nx.docx
HW/EX1/: emb_ex_n1_1.docx  emb_ex_n1_g5.docx
HW/EX2/: emb_ex_n2.docx  emb_ex_n2_2.docx
HW/EX3/: EX5.slx  Ex3.slx  Ex3EMT.slx  Ex3EMT_cgxe.mexw64  Exe3.1.slx  Exe3.slx  Exe30x2E1.slx  Exe30x2E1_cgxe.mexw64  Exe3_2.slx  Exe3_2.slx.original  Subsystem.slx  buffer_code.c  emb_ex_n3.2.docx  emb_ex_n3.docx  fan_Ex5.slx  fun.slx  fun.slxc  ~$b_ex_nx.docx
HW/EX3/fun_ert_rtw/: buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  ert_main.cpp  fun.bat  fun.cpp  fun.h  fun_private.h  fun_types.h  rt_defines.h  rtwtypes.h  rtwtypeschksum.mat
HW/EX3/fun_ert_rtw/export/: fun.cmake  funTargets.cmake
HW/EX3/fun_ert_rtw/tmwinternal/: simulink_cache.xml  tr
HW/EX3/slprj/_cprj/: Ex3EMT_DFCache.mat  Exe30x2E1_DFCache.mat  Exe30x2E1_restored_from_autosave_DFCache.mat  Exe3_2_DFCache.mat  Exe3_DFCache.mat  m_LhIl6bkiF8HI5r8OZspQ5B.c  m_LhIl6bkiF8HI5r8OZspQ5B.h  m_LhIl6bkiF8HI5r8OZspQ5B.mat  m_dCPOFtT6tl0tahhA1iZ8uB.h  m_dCPOFtT6tl0tahhA1iZ8uB.mat  m_raCHpldexqYpqn6pvJMu3D.c  m_raCHpldexqYpqn6pvJMu3D.h  m_raCHpldexqYpqn6pvJMu3D.mat
HW/EX3/slprj/_jitprj/: 9ZgXC47lBU5SCiVvVMnjIE.mat  Jc2VBnm6buyfV4ZY1kmDXG.l  Jc2VBnm6buyfV4ZY1kmDXG.mat  jitEngineAccessInfo.mat  jllFdJ2R4NVBIqejsnNz9E.l  jllFdJ2R4NVBIqejsnNz9E.mat  rjniuoQTi5miYZypbQgfyB.l  rjniuoQTi5miYZypbQgfyB.mat  sZMFUS0vai38eXysydjTfi.l  sZMFUS0vai38eXysydjTfi.mat  sZihxUlpsNBbdh510OrjoBF.mat
HW/EX3/slprj/_sfprj/EMLReport/: emlReportAccessInfo.mat  sZMFUS0vai38eXysydjTfi.mat  sZihxUlpsNBbdh510OrjoBF.mat
HW/EX3/slprj/_sfprj/fun/: amsi_serial.mat
HW/EX3/slprj/_sfprj/precompile/: SFHgGll3f0slARRYrCBZEH.mat  VLl8ZD4Uav0R4lRHA9GHVH.mat  ZPoAB2mlcGiZJkd7HdrDKE.mat  autoInferAccessInfo.mat
HW/EX3/slprj/ert/_sharedutils/: shared_file.dmr
HW/EX4/: classActivity (1).slx  classActivity (2).slx  emb_ex_n4.docx
HW/EX4/Codes/: ActiveClass1.c  ActiveClass2.c
HW/EX5/: Link wev site.txt  code.cpp  emb_ex_n5.docx  emb_ex_n5_2.docx
HW/EX6/: emb_ex_n6.docx  emb_ex_n6_2.docx  ~$b_ex_n6.docx
HW/EX6/MyCode/MyCodeFan/: MyCodeFan.ino
HW/EX6/PlatformIO and FreeRTOS/src/: main.cpp
HW/EX6/ProteusEX6/: EmbeddEx6.pdsprj  EmbeddEx6.pdsprj.FARTASH.Fartash.workspace  MyCodeFan.ino.hex
HW/EX6/Test Lab (Ultrasonic Simulation in Proteus)/: UltraSonic_Simple.pdsprj  UltraSonic_Simple.pdsprj.FARTASH.Fartash.workspace
HW/EX6/Test Lab (Ultrasonic Simulation in Proteus)/Project Backups/: UltraSonic_Simple [20241220, 18-28-08].pdsprj  UltraSonic_Simple [20241220, 19-25-05].pdsprj  UltraSonic_Simple [20241220, 19-35-38].pdsprj  UltraSonic_Simple [20241220, 19-40-01].pdsprj  UltraSonic_Simple [20241229, 23-15-53].pdsprj  UltraSonic_Simple [Autosaved].pdsprj
HW/EX6/Test Lab (Ultrasonic Simulation in Proteus)/code ardunio/MyCodeFan/: MyCodeFan.ino
HW/EX7/: emb_ex_n7.docx  emb_ex_n7_2.docx
HW/EX7/Part A Q2/Ex7_PlatformIO/: platformio.ini
HW/EX7/Part A Q2/Ex7_PlatformIO/src/: main.cpp
HW/EX7/Part A Q2/ProteusEX7/: EmbeddEx7.pdsprj  EmbeddEx7.pdsprj.FARTASH.Fartash.workspace  MyCodeFan.ino.hex  firmware.hex
HW/EX7/Part A Q2/ProteusEX7/Project Backups/: EmbeddEx6 [20241220, 22-44-14].pdsprj  EmbeddEx6 [20241221, 12-22-29].pdsprj  EmbeddEx6 [20241230, 00-53-20].pdsprj  EmbeddEx6 [20241230, 23-06-26].pdsprj  EmbeddEx7 [20241231, 22-07-03].pdsprj  EmbeddEx7 [Autosaved].pdsprj
HW/EX7/Part A Q2/Simulink/: fun.slx  fun.slxc  fun_1_SLT.xml
HW/EX7/Part A Q2/Simulink/fun_ert_rtw/: CMakeLists.txt  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  ert_main.cpp  fun.cpp  fun.h  fun_private.h  fun_types.h  rt_defines.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat
HW/EX7/Part A Q2/Simulink/fun_ert_rtw/tmwinternal/: simulink_cache.xml  tr
HW/EX7/Part B Q2/Ex7_PlatformioForFixedpoint/: platformio.ini
HW/EX7/Part B Q2/Ex7_PlatformioForFixedpoint/src/: main.cpp
HW/EX7/Part B Q2/ProteusEX7/: EmbeddEx7.pdsprj  EmbeddEx7.pdsprj.FARTASH.Fartash.workspace
HW/EX7/Part B Q2/ProteusEX7/Project Backups/: EmbeddEx6 [Autosaved].pdsprj  EmbeddEx7 [20250104, 12-44-50].pdsprj  EmbeddEx7 [Autosaved].pdsprj
HW/EX8/: emb_ex_n8.2.docx  emb_ex_n8.docx
HW/EX8/EX8_Embeded_Platformio/: code.code-workspace  platformio.ini
HW/EX8/EX8_Embeded_Platformio/include/: classActivity.h  classActivity_private.h  classActivity_types.h
HW/EX8/EX8_Embeded_Platformio/src/: main.cpp
HW/EX8/EX8_Embeded_Platformio/test/: README  Uint_Test.cpp
HW/EX8/Proteus/: SimulationEx4forEx8.pdsprj  SimulationEx4forEx8.pdsprj.FARTASH.Fartash.workspace
HW/EX8/Proteus/Project Backups/: New Project [20250102, 23-41-30].pdsprj  New Project [20250103, 00-02-17].pdsprj  New Project [20250103, 00-22-03].pdsprj  New Project [20250103, 01-41-57].pdsprj  New Project [20250103, 17-59-09].pdsprj  New Project [Autosaved].pdsprj
HW/EX8/Simulink/: classActivity.slx  classActivity.slxc
HW/EX8/Simulink/EX8_Q3_PartA/: classActivity.slx
HW/EX8/Simulink/classActivity_ert_rtw/: buildInfo.mat  classActivity.cpp  classActivity.h  classActivity.mk  classActivity_private.h  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  make_exception.mat  rtmodel.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat  wrapper.mk
HW/EX8/Simulink/classActivity_ert_rtw/tmwinternal/: simulink_cache.xml  tr
HW/EX8/Simulink/slcov_output/classActivity/: classActivity_cvdata.cvt  classActivity_cvdata_1.cvt  classActivity_cvdata_10.cvt  classActivity_cvdata_11.cvt  classActivity_cvdata_12.cvt  classActivity_cvdata_2.cvt  classActivity_cvdata_3.cvt  classActivity_cvdata_4.cvt  classActivity_cvdata_5.cvt  classActivity_cvdata_6.cvt  classActivity_cvdata_7.cvt  classActivity_cvdata_8.cvt  classActivity_cvdata_9.cvt
HW/EX8/Simulink/slprj/_jitprj/: jitEngineAccessInfo.mat  sAzISdQ9QEwPQ1ifUHqpKBD.l  sAzISdQ9QEwPQ1ifUHqpKBD.mat  sCnFbACKDwpIMcjR3XvWtKH.l  sCnFbACKDwpIMcjR3XvWtKH.mat  sDGJDDeh2KCtXNoI3Al3FjB.l  sDGJDDeh2KCtXNoI3Al3FjB.mat  sWGcjn4QJ5cRV6aMtVg1QTB.l  sWGcjn4QJ5cRV6aMtVg1QTB.mat  sWbBZ1LYLLB072yaTp61vTC.l  (+14 more)
HW/EX8/امتیازی/: ex8_3.rar  example code lpsovle.rar
(+155 files in other folders)
